--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.navbar {
+  background-color: #000;
+  
+}
+
+.navbar {
+  color: #FFF;
+}
+
+footer {
+  background-color: #000;
+  position:fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px; /* Vertically center the text there */
+  color:#fff; 
+}
